Changes for 1.3.1.0
* Finished making repair rules work for both damage done to units and damage done to territories. 
  A note to map makers: repair rules should mention the actual unit, not a _hit version of the unit.  This means all repair rules that mention "factory_hit" will need to be changed to mention "factory". (veqryn)

* Initial work on making repair rules work for damage done to units. (veqryn)

* Fixed null pointer in moore ai for games which don't have carriers. (veqryn)

* Added method to unit class to find territory unit is in. (veqryn)

* Fixed moore AI and easy AI to not purchase any unit which has consumesUnits. (veqryn)

* Fixed bug in scrambling code where user was not being asked if they want to scramble. (veqryn)

* Fixed infinite loop introduced into original factory owner check. (veqryn)

* Added new unit attachment, canProduceUnits, which allows a unit to produce other units, without being a factory. Therefor we can now have combat factories, flying factories, or aa gun factories, or w/e. (veqryn)

* Added the developer forum and the war club to the lobby help menu. (veqryn)

* Added tool tips for units to battle calculator. (veqryn)

* Fixed null pointer caused by using .getOwner().getData()  and a word to anyone else who ever thinks about using this: don't, it causes null pointers if there are any neutrals, since neutral is a null player. (veqryn)

* Created new unit attachment, requiresUnits, which allows units to be placed only when certain units are in the territory. (veqryn)

* Changed it so that Territory production defaults to Zero instead of 2, and that unitProduction gets set to a territory's production, though you can still set unitProduction manually if you set it AFTER you set production. (veqryn)

* Created new unit attachment, consumesUnits, which allows units to be upgraded or placed on top of other units. (veqryn)
